[project]
name = "dify-vdb-elasticsearch"
version = "0.0.1"

dependencies = [
    "elasticsearch==8.14.0",
]
description = "Dify vector store backend (dify-vdb-elasticsearch)."

[project.entry-points."dify.vector_backends"]
elasticsearch = "dify_vdb_elasticsearch.elasticsearch_vector:ElasticSearchVectorFactory"
elasticsearch-ja = "dify_vdb_elasticsearch.elasticsearch_ja_vector:ElasticSearchJaVectorFactory"

[tool.setuptools.packages.find]
where = ["src"]
